--- a/ex002/index.html
+++ b/ex002/index.html
@@ -32,6 +32,11 @@
         <h2>3) - Avaliação final</h2>
         <h3>1 dia</h3>
         <p>Temos nosso projeto finalizado e funcionando. Mas ele cumpriu seu objetivo? O cliente ou a equipe ficaram satisfeitos com a sua versão final? E os usuários, como eles se sentiram em relação ao nosso projeto?</p>
+        <h2>Duração total</h2>
+        <p>20 dias, caso não seja necessário repetir nenhuma fase do processo.</p>
+        <a href="./pdf.pdf" download="processo.pdf">
+        <button >Imprimir o processo</button>
+        </a>
     </div>
 </body>
 </html>
