--- a/ex004/index.html
+++ b/ex004/index.html
@@ -9,36 +9,8 @@
 </head>
 <body>
     <div>
-        <h1>UX Research </h1>
-        <p>Considerações iniciais:
-            <ul>
-                <li>O plano terá o tempo limite de 4 semanas.</li>
-                <li>O foco será no BinaryBreaker (produto criado para rivalizar com o hackthissite) </li>
-                <li>O time será composto de 4-5 pessoas.</li>
-                <li>Na semana, é considerado apenas os dias úteis, ou seja, 5 dias.</li>
-                <li>Ao final será fornecido um plano extra com uma adição de duas semanas.</li>
-                <li><a href="./plano-ux.pdf" download="plano-ux.pdf">Clique aqui para fazer o download do entregável</a></li>
-            </ul>
-        </p>
-        <h2>1º Etapa: Definir o nosso foco.</h2>
-        <h3>1 semana</h3>
-        <p>Sabemos que atuaremos no ramo de cibersegurança, então agora é o momento de reunir informações e descobrir pontos interessantes a ser explorados na área. A equipe terá uma semana para trazer problemas que carecem de solução e quem provavelmente seria o grupo mais afetado por tais problemas. Ao final, decidiriamos qual visão valia a pena explorar.</p>
-        <h2>2º etapa: Formação de hipóteses</h2>
-        <h3>2 dias</h3>
-        <p>Após uma conversa, nosso time chegou a conclusão de que pessoas leigas poderiam ser parte expressiva do público que procuraria nossos serviços e, olhando de maneira mais crítica para o site concorrente, percebemos que não havia suporte algum para esse grupo. Também chegamos ao consenso de que era provável que nosso público fosse formado de jovens-adultos e adultos (20-40 anos). A complexidade das informações e a falta de material poderia afetar diretamente esse grupo, e poderia eventualmente fazê-los desistir da área também. Guardamos nossas ideias em um papel e o guardamos para uma próxima etapa.</p>
-        <h2>3º etapa: Decidir quais métodos serão utilizados</h2>
-        <h3>3 dias</h3>
-        <p>No fim da segunda semana, decidimos quais métodos seriam utilizados para provar nossas hipóteses. Iriamos, em primeiro momento, marcar entrevistas com profissionais já experientes na área para descobrir suas principais dificuldades ao começar e se estavam inclinados a se interessarem pelo nosso produto. Depois, decidimos que seria bom ir atrás das ditas pessoas leigas e descobrir mais sobre elas: suas motivações, hábitos e reclamações. Para isso, iriamos usar um funil de análise para filtrar esse público e, ao fim, um questionário fechado a fim de obter mais informações.</p>
-        </p>
-        <h2>4º passo: Começo da pesquisa</h2>
-        <h3>1 semana</h3>
-        <p>Para uma pesquisa mais eficiente, separamos nossa equipe em duas partes: 2 pessoas cuidariam das entrevistas, sendo um o entrevistador e o outro o assistente, e a segunda parte cuidaria da prospecção de pessoas para dentro do nosso funil, a fim de atrair uma amostra maior do público desejado. Ambas as partes terão uma semana para coletarem a maior quantidade de dados possíveis.</p>
-        <h2>5º etapa: Análise dos resultados</h2>
-        <h3>1 semana</h3>
-        <p>Nesses cinco dias finais, iremos resgatar nossas teorias e compará-las com todos os dados coletados. Em cima disso, criaremos um relatório para o nosso cliente contando partes cruciais das nossas pesquisas e seus respectivos resultados.</p>
-        <h2>Etapa Extra</h2>
-        <h3>2 semanas</h3>
-        <p>Como já  possuimos uma experiência prévia do nosso público, o ideal agora seria analisar novamente as pesquisas e ver insights que provavelmente foram ignorados por não ser condizente com o momento que estávamos. Voltando as coisas que o público analisado nos informou, iriamos dar início a uma nova pesquisa. O tempo para a análise de insights, busca por validação e produção do relatório final seriam de, respectivamente,  2 dias, 5 dias e 3 dias. </p>
+        <h1>PROTÓTIPO </h1>
+        <p><a href="./prototipo.pdf" download="prototipo.pdf">Clique aqui para fazer o download do entregável</a></p></p>
     </div>
 </body>
 </html>
